# Pazi

./: CMakeLists.txt  main.c
